Link default ports for ease of finding

--- a/modules/ROOT/pages/deployment/general/general-info.adoc
+++ b/modules/ROOT/pages/deployment/general/general-info.adoc
@@ -413,6 +413,10 @@ You can now login with one of the demo users created using the `OCIS_URL` in you
 
 If you have enabled demo users and groups and you want to manage or delete them, use the web UI, e.g. `\https://localhost:9200`.
 
+== Default Ports
+
+See xref:deployment/services/services.adoc#used-port-ranges[Used Port Ranges] at the _Services_ description for details.
+
 == Using a Reverse Proxy
 
 // https://owncloud.dev/ocis/deployment/ocis_individual_services/
