roles and permissions

--- a/modules/ROOT/pages/deployment/general/general-info.adoc
+++ b/modules/ROOT/pages/deployment/general/general-info.adoc
@@ -422,6 +422,10 @@ See xref:deployment/services/ports-used.adoc[Used Port Ranges] at the _Services_
 
 See xref:deployment/services/logging.adoc[Logging] at the _Services_ description for details.
 
+=== Roles and Permissions
+
+See the xref:deployment/general/roles-permissions.adoc[Roles and Permissions] document for details.
+
 == Using a Reverse Proxy
 
 // https://owncloud.dev/ocis/deployment/ocis_individual_services/
